Eclipse warnings in keys.validation, profile, roles